# SRM-Github

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  TODO  config.h.in  configure  configure.ac  srm.sln  srm.vcxproj  srmtest.sh  test.bat  test.sh
doc/: Makefile.am  Makefile.in  srm.1  srm.1.in
lib/: Makefile.in
src/: Makefile.am  Makefile.in  error.c  fill.c  impl.h  main.c  random.c  srm.h  sunlink.c  tree_walker.c
test/: Makefile.am  Makefile.in  fill_test.c
win/: Makefile.in  config.h  srm.rc  tree.cpp
